Pulso v2 + Espacio: creator, discovery, analytics and showcase
Merge validated Pulso v2 and Espacio showcase features into main after explicit user authorization.