@@ -1,5 +1,6 @@
 package com.socialtush.modules.posts.controller;
 
+import com.fasterxml.jackson.annotation.JsonProperty;
 import com.socialtush.modules.posts.entity.Post;
 import com.socialtush.modules.posts.entity.SavedPost;
 import com.socialtush.modules.posts.repository.PostRepository;
@@ -7,7 +8,6 @@ import com.socialtush.modules.posts.repository.SavedPostRepository;
 import com.socialtush.modules.posts.service.PostService;
 import com.socialtush.modules.profiles.entity.Profile;
 import com.socialtush.modules.profiles.repository.ProfileRepository;
-import com.socialtush.modules.social.entity.Follow;
 import com.socialtush.modules.social.repository.FollowRepository;
 import com.socialtush.modules.users.entity.User;
 import com.socialtush.modules.users.repository.UserRepository;
@@ -24,7 +24,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
-import com.fasterxml.jackson.annotation.JsonProperty;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -47,24 +46,21 @@ public class PostController {
             @RequestParam(value = "location", required = false) String location,
             @RequestParam(value = "musicTitle", required = false) String musicTitle,
             @RequestParam(value = "isShortVideo", defaultValue = "false") boolean isShortVideo,
+            @RequestParam(value = "trimStart", required = false) Double trimStart,
+            @RequestParam(value = "trimEnd", required = false) Double trimEnd,
+            @RequestParam(value = "coverTime", required = false) Double coverTime,
             @RequestParam(value = "files", required = false) MultipartFile[] files,
             @RequestParam(value = "circleId", required = false) UUID circleId,
             @AuthenticationPrincipal User currentUser
     ) {
-        if (currentUser == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
-        }
-
-        PostDto dto = postService.createPost(caption, location, musicTitle, isShortVideo, files, circleId, currentUser);
-        return ResponseEntity.ok(dto);
+        if (currentUser == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
+        return ResponseEntity.ok(postService.createPost(caption, location, musicTitle, isShortVideo,
+                trimStart, trimEnd, coverTime, files, circleId, currentUser));
     }
 
     @DeleteMapping("/{postId}")
     public ResponseEntity<?> deletePost(@PathVariable UUID postId, @AuthenticationPrincipal User currentUser) {
-        if (currentUser == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
-        }
-
+        if (currentUser == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
         try {
             postService.deletePost(postId, currentUser);
             return ResponseEntity.noContent().build();
@@ -77,110 +73,105 @@ public class PostController {
         }
     }
 
-    @GetMapping("/feed")
-    public ResponseEntity<?> getFeed(
-            @RequestParam(defaultValue = "0") int page,
-            @RequestParam(defaultValue = "10") int size,
-            @AuthenticationPrincipal User currentUser
-    ) {
-        if (currentUser == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
-        }
+    @PutMapping("/{postId}/feature")
+    public ResponseEntity<?> featurePost(@PathVariable UUID postId,
+                                         @RequestParam(defaultValue = "1") int position,
+                                         @AuthenticationPrincipal User currentUser) {
+        if (currentUser == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
+        return ResponseEntity.ok(postService.featurePost(postId, position, currentUser));
+    }
 
+    @DeleteMapping("/{postId}/feature")
+    public ResponseEntity<?> unfeaturePost(@PathVariable UUID postId, @AuthenticationPrincipal User currentUser) {
+        if (currentUser == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
+        return ResponseEntity.ok(postService.unfeaturePost(postId, currentUser));
+    }
+
+    @PostMapping("/{postId}/pulse-view")
+    public ResponseEntity<?> recordPulseView(@PathVariable UUID postId,
+                                             @RequestBody PulseViewRequest request,
+                                             @AuthenticationPrincipal User currentUser) {
+        if (currentUser == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
+        postService.recordPulseView(postId, request == null ? 0L : request.getWatchMillis(),
+                request != null && request.isCompleted(), currentUser);
+        return ResponseEntity.noContent().build();
+    }
+
+    @PostMapping("/{postId}/pulse-share")
+    public ResponseEntity<?> recordPulseShare(@PathVariable UUID postId, @AuthenticationPrincipal User currentUser) {
+        if (currentUser == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
+        postService.recordPulseShare(postId, currentUser);
+        return ResponseEntity.noContent().build();
+    }
+
+    @GetMapping("/{postId}/pulse-insights")
+    public ResponseEntity<?> pulseInsights(@PathVariable UUID postId, @AuthenticationPrincipal User currentUser) {
+        if (currentUser == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
+        return ResponseEntity.ok(postService.pulseInsights(postId, currentUser));
+    }
+
+    @GetMapping("/feed")
+    public ResponseEntity<?> getFeed(@RequestParam(defaultValue = "0") int page,
+                                     @RequestParam(defaultValue = "10") int size,
+                                     @AuthenticationPrincipal User currentUser) {
+        if (currentUser == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
         Pageable pageable = PageRequest.of(page, size);
         Page<Post> postPage = postRepository.findFeedPostsNew(currentUser, pageable);
-
-        List<PostDto> dtos = postPage.getContent().stream()
-                .map(p -> postService.convertToDto(p, currentUser))
-                .collect(Collectors.toList());
-
+        List<PostDto> dtos = postPage.getContent().stream().map(p -> postService.convertToDto(p, currentUser)).collect(Collectors.toList());
         Map<String, Object> response = new HashMap<>();
         response.put("posts", dtos);
         response.put("currentPage", postPage.getNumber());
         response.put("totalItems", postPage.getTotalElements());
         response.put("totalPages", postPage.getTotalPages());
         response.put("isLast", postPage.isLast());
-
         return ResponseEntity.ok(response);
     }
 
     @GetMapping("/explore")
-    public ResponseEntity<?> getExplore(
-            @RequestParam(defaultValue = "false") boolean reelsOnly,
-            @RequestParam(defaultValue = "0") int page,
-            @RequestParam(defaultValue = "12") int size,
-            @AuthenticationPrincipal User currentUser
-    ) {
+    public ResponseEntity<?> getExplore(@RequestParam(defaultValue = "false") boolean reelsOnly,
+                                        @RequestParam(defaultValue = "0") int page,
+                                        @RequestParam(defaultValue = "12") int size,
+                                        @AuthenticationPrincipal User currentUser) {
         Pageable pageable = PageRequest.of(page, size);
         Page<Post> postPage = currentUser == null
                 ? postRepository.findPublicExplorePosts(reelsOnly, pageable)
                 : postRepository.findExplorePostsVisibleTo(reelsOnly, currentUser.getId(), pageable);
-
-        List<PostDto> dtos = postPage.getContent().stream()
-                .map(p -> postService.convertToDto(p, currentUser))
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(postPage.getContent().stream().map(p -> postService.convertToDto(p, currentUser)).toList());
     }
 
     @GetMapping("/user/{username}")
-    public ResponseEntity<?> getUserPosts(
-            @PathVariable String username,
-            @RequestParam(defaultValue = "0") int page,
-            @RequestParam(defaultValue = "12") int size,
-            @AuthenticationPrincipal User currentUser
-    ) {
+    public ResponseEntity<?> getUserPosts(@PathVariable String username,
+                                          @RequestParam(defaultValue = "0") int page,
+                                          @RequestParam(defaultValue = "12") int size,
+                                          @AuthenticationPrincipal User currentUser) {
         User targetUser = userRepository.findByUsernameIgnoreCase(username.trim()).orElse(null);
-        if (targetUser == null) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("message", "Usuario no encontrado"));
-        }
-
+        if (targetUser == null) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("message", "Usuario no encontrado"));
         Profile targetProfile = profileRepository.findById(targetUser.getId()).orElse(null);
         boolean isSelf = currentUser != null && currentUser.getId().equals(targetUser.getId());
         boolean isFollowing = currentUser != null && followRepository.existsByFollowerAndFollowing(currentUser, targetUser);
-
         if (targetProfile != null && targetProfile.isPrivate() && !isSelf && !isFollowing) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN).body(Map.of("message", "Esta cuenta es privada"));
         }
-
         Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
         Page<Post> postPage = currentUser == null
                 ? postRepository.findPublicProfilePosts(targetUser, pageable)
                 : postRepository.findProfilePostsVisibleTo(targetUser, currentUser.getId(), pageable);
-
-        List<PostDto> dtos = postPage.getContent().stream()
-                .map(p -> postService.convertToDto(p, currentUser))
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(postPage.getContent().stream().map(p -> postService.convertToDto(p, currentUser)).toList());
     }
 
     @PostMapping("/{postId}/save")
     public ResponseEntity<?> savePost(@PathVariable UUID postId, @AuthenticationPrincipal User currentUser) {
-        if (currentUser == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
-        }
-
+        if (currentUser == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "No autenticado"));
         Post post = postRepository.findById(postId).orElse(null);
-        if (post == null) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("message", "Publicación no encontrada"));
-        }
-        if (!postService.canViewPost(post, currentUser)) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(Map.of("message", "No tienes acceso a esta publicación"));
-        }
-
+        if (post == null) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("message", "Publicación no encontrada"));
+        if (!postService.canViewPost(post, currentUser)) return ResponseEntity.status(HttpStatus.FORBIDDEN).body(Map.of("message", "No tienes acceso a esta publicación"));
         Optional<SavedPost> savedOpt = savedPostRepository.findByUserAndPostId(currentUser, postId);
         if (savedOpt.isPresent()) {
             savedPostRepository.delete(savedOpt.get());
             return ResponseEntity.ok(Map.of("saved", false, "message", "Publicación eliminada de guardados"));
-        } else {
-            SavedPost savedPost = SavedPost.builder()
-                    .user(currentUser)
-                    .post(post)
-                    .build();
-            savedPostRepository.save(savedPost);
-            return ResponseEntity.ok(Map.of("saved", true, "message", "Publicación guardada con éxito"));
         }
+        savedPostRepository.save(SavedPost.builder().user(currentUser).post(post).build());
+        return ResponseEntity.ok(Map.of("saved", true, "message", "Publicación guardada con éxito"));
     }
 
     @GetMapping("/{postId}")
@@ -192,20 +183,14 @@ public class PostController {
     }
 
     @GetMapping("/reels")
-    public ResponseEntity<?> getReels(
-            @RequestParam(defaultValue = "0") int page,
-            @RequestParam(defaultValue = "10") int size,
-            @AuthenticationPrincipal User currentUser
-    ) {
+    public ResponseEntity<?> getReels(@RequestParam(defaultValue = "0") int page,
+                                      @RequestParam(defaultValue = "10") int size,
+                                      @AuthenticationPrincipal User currentUser) {
         Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
         Page<Post> reelsPage = currentUser == null
                 ? postRepository.findPublicExplorePosts(true, pageable)
                 : postRepository.findExplorePostsVisibleTo(true, currentUser.getId(), pageable);
-
-        List<PostDto> dtos = reelsPage.getContent().stream()
-                .map(post -> postService.convertToDto(post, currentUser))
-                .collect(Collectors.toList());
-
+        List<PostDto> dtos = reelsPage.getContent().stream().map(post -> postService.convertToDto(post, currentUser)).toList();
         return ResponseEntity.ok(Map.of(
                 "posts", dtos,
                 "currentPage", reelsPage.getNumber(),
@@ -213,6 +198,25 @@ public class PostController {
                 "totalPages", reelsPage.getTotalPages(),
                 "isLast", reelsPage.isLast()
         ));
+    }
+
+    @Data
+    public static class PulseViewRequest {
+        private long watchMillis;
+        private boolean completed;
+    }
+
+    @Data
+    @Builder
+    public static class PulseInsightsDto {
+        private UUID postId;
+        private long views;
+        private double averageWatchSeconds;
+        private double completionRate;
+        private long completions;
+        private long shares;
+        private long resonances;
+        private long echoes;
     }
 
     @Data
@@ -228,6 +232,10 @@ public class PostController {
         private String musicTitle;
         private List<String> mediaUrls;
         private List<String> mediaTypes;
+        private List<String> mediaThumbnailUrls;
+        @JsonProperty("isShortVideo")
+        private boolean shortVideo;
+        private Integer featuredPosition;
         private UUID circleId;
         private long likesCount;
         private long commentsCount;
